# rust_rocket_rest_api

./: Cargo.toml  data.sqlite
src/: main.rs
